--- a/src/styles/_joinUs.scss
+++ b/src/styles/_joinUs.scss
@@ -388,8 +388,8 @@
     margin-bottom: 1rem;
   }
 }
+// POP-UP-TO-COPY
 div.sign-up-popup {
-  position: relative;
   display: flex;
   align-items: center;
   background-color: #ff7c5c;
@@ -399,6 +399,7 @@ div.sign-up-popup {
   margin-right: 25%;
   border: none;
   border-radius: 3.2rem;
+  padding-bottom: 1rem;
   i.bi-plus-circle {
     position: absolute;
     top: 2rem;
@@ -473,21 +474,19 @@ div.sign-up-popup {
     text-align: center;
     color: white;
   }
-  i.bi-instagram {
-    position: absolute;
-    bottom: 2rem;
-    left: 43%;
-    margin-right: 2rem;
-    color: white;
-    font-size: 3rem;
-  }
-  i.bi-facebook {
-    position: absolute;
-    bottom: 2rem;
-    right: 43%;
-    margin-left: 2rem;
-    color: white;
-    font-size: 3rem;
+  .social-icons-pop-up {
+    align-content: center;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    .instagram-pop-up {
+      font-size: 3rem;
+      margin-right: 1rem;
+    }
+    .facebook-pop-up {
+      display: inline;
+      font-size: 3rem;
+      margin-left: 1rem;
+    }
   }
 }
 
@@ -537,83 +536,6 @@ div.sign-up-popup {
     font-weight: 500;
     color: #024a63;
     margin-bottom: 3.3rem;
-  }
-
-  div.joinus-image-left-col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    position: relative;
-    width: 50%;
-    max-width: 56.98rem;
-    margin-left: 10%;
-    margin-bottom: 5.37rem;
-
-    p.joinus-card-text {
-      position: absolute;
-      bottom: 14.6rem;
-      font-family: "Cabin", sans-serif;
-      font-size: 3.2rem;
-      font-weight: 600;
-      color: white;
-      margin-left: 4rem;
-      margin-right: 4rem;
-    }
-    .check-email-card3 {
-      position: absolute;
-      bottom: 4.7rem;
-      font-family: "Cabin", sans-serif;
-      font-weight: 600;
-      font-size: 2rem;
-      color: white;
-    }
-    .joinus-card-btn {
-      position: absolute;
-      bottom: 4.7rem;
-      background-color: #ff7c5c;
-      color: white;
-      font-size: 2rem;
-      font-family: "Cabin", sans-serif;
-      font-weight: 600;
-      padding: 1rem 1.6rem;
-      border-radius: 4.3rem;
-    }
-  }
-
-  .joinus-image-right-col {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    position: relative;
-    width: 50%;
-    max-width: 56.98rem;
-    margin-right: 10%;
-    margin-bottom: 5.37rem;
-    .joinus-card-text {
-      position: absolute;
-      bottom: 14.6rem;
-      font-family: "Cabin", sans-serif;
-      font-size: 3.2rem;
-      font-weight: 600;
-      color: white;
-      margin-left: 4rem;
-      margin-right: 4rem;
-    }
-    .joinus-card-btn {
-      position: absolute;
-      background-color: #ff7c5c;
-      bottom: 4.7rem;
-      color: white;
-      font-size: 2rem;
-      font-family: "Cabin", sans-serif;
-      font-weight: 600;
-      padding: 1rem 1.6rem;
-      border-radius: 4.3rem;
-    }
   }
 
   // Form field
@@ -767,8 +689,8 @@ div.sign-up-popup {
     background-color: #024a63;
     border-radius: 0rem 0rem 0rem 0rem;
     padding-top: 3rem;
-    margin-left: 12%;
-    margin-right: 12%;
+    margin-left: 10%;
+    margin-right: 10%;
     width: 80%;
     color: white;
   }
@@ -778,8 +700,8 @@ div.sign-up-popup {
     font-size: 2.3rem;
     font-weight: 300;
     border: none;
-    margin-left: 12%;
-    margin-right: 12%;
+    margin-left: 10%;
+    margin-right: 10%;
     width: 80%;
     background-color: #024a63;
     color: white;
@@ -800,8 +722,8 @@ div.sign-up-popup {
     color: white;
     width: 80%;
     height: 6rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
     text-align: center;
   }
 
@@ -811,31 +733,15 @@ div.sign-up-popup {
     right: 3rem;
     font-size: 2.5rem;
   }
-}
-@media (min-width: 500px) {
-  .repeating-h1-join {
-    font-family: "Cabin", sans-serif;
-    font-size: 4.5rem;
-    font-weight: 700;
-    color: #024a63;
-  }
-  .card-headers {
-    text-align: center;
-    font-family: "cabin", sans-serif;
-    font-size: 3rem;
-    font-weight: 500;
-    color: #024a63;
-    margin-bottom: 2.4rem;
-  }
+  // POP-UP-TO-COPY
   div.sign-up-popup {
-    position: relative;
     display: flex;
     align-items: center;
     background-color: #ff7c5c;
-    width: 70%;
-    height: 70rem;
-    margin-left: 15%;
-    margin-right: 15%;
+    width: 50%;
+    height: 70%;
+    margin-left: 25%;
+    margin-right: 25%;
     border: none;
     border-radius: 3.2rem;
     i.bi-plus-circle {
@@ -847,29 +753,24 @@ div.sign-up-popup {
       transform: rotate(45deg);
       cursor: pointer;
     }
-
     .sign-up-card-header {
-      margin-left: 10%;
-      margin-right: 10%;
       font-family: "cabin", sans-serif;
-      font-size: 3.2rem;
+      font-size: 4rem;
       font-weight: 700;
       color: white;
       text-align: center;
-      margin-top: 2rem;
+      margin-top: 4rem;
     }
     #checkmark {
       margin-top: 2rem;
-      width: 8rem;
-      height: 8rem;
+      width: 14.1rem;
+      height: 14.1rem;
     }
     .sign-up-card-h2 {
       margin-top: 2rem;
-      margin-left: 10%;
-      margin-right: 10%;
       color: white;
       font-family: "cabin", sans-serif;
-      font-size: 2.2rem;
+      font-size: 30px;
       font-style: normal;
       font-weight: 600;
       line-height: 36px;
@@ -883,12 +784,12 @@ div.sign-up-popup {
       border: 1.492px solid #bededf;
     }
     .sign-up-card-h3 {
-      margin-left: 5%;
-      margin-right: 5%;
+      margin-left: 15%;
+      margin-right: 15%;
       margin-bottom: 1.4rem;
       color: white;
       font-family: Cabin;
-      font-size: 1.8rem;
+      font-size: 22px;
       font-style: normal;
       font-weight: 600;
       line-height: 36px;
@@ -906,8 +807,8 @@ div.sign-up-popup {
       text-align: center;
     }
     .sign-up-card-p {
-      margin-left: 5%;
-      margin-right: 5%;
+      margin-left: 10%;
+      margin-right: 10%;
       font-family: Raleway;
       font-size: 15px;
       font-style: normal;
@@ -917,241 +818,80 @@ div.sign-up-popup {
       text-align: center;
       color: white;
     }
-    i.bi-instagram {
-      position: absolute;
-      bottom: 2rem;
-      left: 43%;
-      margin-right: 2rem;
-      color: white;
-      font-size: 3rem;
-    }
-    i.bi-facebook {
-      position: absolute;
-      bottom: 2rem;
-      right: 43%;
-      margin-left: 2rem;
-      color: white;
-      font-size: 3rem;
-    }
+    // i.bi-instagram {
+    //   display: inline;
+    //   color: white;
+    //   font-size: 3rem;
+    // }
+    // i.bi-facebook {
+    //   display: inline;
+    //   color: white;
+    //   font-size: 3rem;
+    // }
   }
-  // Form field
-  .form-field-card {
-    background: #bededf;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 5rem;
-    border-radius: 4.3rem;
-    padding: 3.3rem 6.5rem 3.3rem 6.5rem;
+}
+@media (min-width: 769px) and (max-width: 1279px) {
+  // POP-UP-TO-COPY
+  div.sign-up-popup {
+    width: 70%;
+    height: 60%;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-bottom: 1rem;
 
-    .form-title-join {
-      font-family: "cabin", sans-serif;
-      font-size: 4rem;
-      font-weight: 600;
-      color: #024a63;
+    .sign-up-card-header {
+      font-size: 3rem;
+      margin-top: 3rem;
     }
-    .form-subtitle-join {
-      font-family: "cabin", sans-serif;
-      font-size: 2.4rem;
-      font-weight: 400;
-      color: #024a63;
-      margin-bottom: 2.4rem;
+    #checkmark {
+      margin-top: 1.5rem;
+      width: 10rem;
+      height: 10rem;
     }
-
-    .join-us-form-labels {
-      font-family: "Cabin", sans-serif;
-      font-weight: 400;
-      font-size: 2rem;
-      color: #024a63;
-    }
-    // Inputs
-    input[type="text"] {
-      padding: 2rem;
-      font-size: 2rem;
-      font-family: "raleway", sans-serif;
-    }
-    input[type="email"] {
-      padding: 2rem;
-      font-size: 2rem;
-      font-family: "raleway", sans-serif;
-    }
-    input[type="number"] {
-      padding: 2rem;
-      font-size: 2rem;
-      font-family: "raleway", sans-serif;
-    }
-    textarea[type="text"] {
-      padding: 1rem;
-      font-size: 2rem;
-      font-family: "raleway", sans-serif;
-    }
-    .input-rows {
-      .left-col {
-        height: 4.4rem;
-        border-radius: 2rem;
-        border: none;
-        margin-bottom: 2.4rem;
-      }
-      .right-col {
-        height: 4.4rem;
-        border-radius: 2rem;
-        border: none;
-        margin-bottom: 2.4rem;
-      }
-    }
-
-    .full-width {
-      float: left;
-      height: 4.4rem;
-      border-radius: 2rem;
-      border: none;
-      margin-bottom: 2.4rem;
-    }
-
-    .join-us-form-checkboxes {
-      font-family: "Cabin", sans-serif;
-      font-weight: 400;
-      font-size: 2rem;
-      color: #024a63;
-    }
-    .checkboxes {
-      margin-top: 5.6rem;
-    }
-    input.radio-button {
-      width: 2.4rem;
-      min-width: 2.4rem;
-      height: 2.4rem;
-      margin-right: 1rem;
-      margin-top: 0.5rem;
-      margin-left: 0rem;
-      border: none;
-    }
-    input.checkbox-join {
+    .sign-up-card-h2 {
       margin-top: 1rem;
-      width: 2rem;
-      min-width: 2rem;
-      height: 2rem;
-      margin-right: 1rem;
-      border: none;
+      font-size: 2.4rem;
+      line-height: 24px;
     }
-    button.sign-up-btn {
-      color: white;
-      margin-top: 4.5rem;
-      margin-bottom: 3.5rem;
-      background-color: #ff7c5c;
-      height: 4.4rem;
-      width: 25.6rem;
-      border-radius: 20px;
-      font-family: "Cabin", sans-serif;
-      font-size: 2rem;
+    .sign-up-card-h3 {
+      margin-left: 15%;
+      margin-right: 15%;
+      margin-bottom: 1.4rem;
+      font-size: 2.4rem;
+      line-height: 3rem;
+    }
+    .sign-up-card-h3-raleway {
+      font-size: 2.4rem;
+      font-style: normal;
       font-weight: 600;
-      line-height: 2.4rem;
-      cursor: pointer;
+      line-height: 32px;
+      letter-spacing: 0em;
+      text-align: center;
     }
-    div.sign-up-popup {
-      position: relative;
-      display: flex;
-      align-items: center;
-      background-color: #ff7c5c;
-      width: 50%;
-      height: 70rem;
-      margin-left: 25%;
-      margin-right: 25%;
-      border: none;
-      border-radius: 3.2rem;
-      i.bi-plus-circle {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-        font-size: 2.4rem;
-        color: white;
-        transform: rotate(45deg);
-        cursor: pointer;
+    .sign-up-card-p {
+      font-size: 1.8rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 26px;
+    }
+    .social-icons-pop-up {
+      align-content: center;
+      padding-bottom: 1rem;
+      margin-bottom: 1rem;
+      .instagram-pop-up {
+        font-size: 3rem;
+        margin-right: 1rem;
       }
-      .sign-up-card-header {
-        font-family: "cabin", sans-serif;
-        font-size: 4rem;
-        font-weight: 700;
-        color: white;
-        text-align: center;
-        margin-top: 4rem;
-      }
-      #checkmark {
-        margin-top: 2rem;
-        width: 14.1rem;
-        height: 14.1rem;
-      }
-      .sign-up-card-h2 {
-        margin-top: 2rem;
-        color: white;
-        font-family: "cabin", sans-serif;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 36px;
-        letter-spacing: 0em;
-        text-align: center;
-      }
-      .blue-line {
-        width: 75%;
-        height: 0.07rem;
-        color: #bededf;
-        border: 1.492px solid #bededf;
-      }
-      .sign-up-card-h3 {
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-bottom: 1.4rem;
-        color: white;
-        font-family: Cabin;
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 36px;
-        letter-spacing: 0em;
-        text-align: center;
-      }
-      .sign-up-card-h3-raleway {
-        color: white;
-        font-family: Raleway;
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 32px;
-        letter-spacing: 0em;
-        text-align: center;
-      }
-      .sign-up-card-p {
-        margin-left: 5%;
-        margin-right: 5%;
-        font-family: Raleway;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 26px;
-        letter-spacing: 0em;
-        text-align: center;
-        color: white;
-      }
-      i.bi-instagram {
-        position: absolute;
-        bottom: 1rem;
-        left: 30%;
-        margin-right: 2rem;
-        color: white;
-        font-size: 2rem;
-      }
-      i.bi-facebook {
-        position: absolute;
-        bottom: 1rem;
-        right: 30%;
-        margin-left: 2rem;
-        color: white;
-        font-size: 2rem;
+      .facebook-pop-up {
+        display: inline;
+        font-size: 3rem;
+        margin-left: 1rem;
       }
     }
   }
 }
-@media (min-width: 320px) and (max-width: 499px) {
+
+@media (min-width: 320px) and (max-width: 768px) {
   .joinus-cabin-large {
     font-size: 4rem;
     margin-top: 15rem;
@@ -1177,24 +917,24 @@ div.sign-up-popup {
     margin-right: 5%;
     margin-bottom: 1rem;
   }
-  .card-headers {
-    font-size: 2rem;
-    margin-bottom: 3.3rem;
-  }
 
   // Cards
   .card-headers {
     text-align: center;
     font-family: "cabin", sans-serif;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 500;
     color: #024a63;
     margin-bottom: 3.3rem;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   .join-us-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
+    overflow-x: hidden;
+    margin-bottom: 2rem;
 
     .join-card {
       display: flex;
@@ -1268,10 +1008,9 @@ div.sign-up-popup {
       background-position: center;
       width: 30rem;
       height: 20.9rem;
-      // margin-left: 50%;
+
       display: flex;
-      // flex-direction: column;
-      // justify-content: flex-end;
+
       align-items: center;
       margin-bottom: 1rem;
     }
@@ -1284,10 +1023,9 @@ div.sign-up-popup {
       background-position: center;
       width: 30rem;
       height: 20.9rem;
-      // margin-left: 50%;
+
       display: flex;
-      // flex-direction: column;
-      // justify-content: flex-end;
+
       align-items: center;
       margin-bottom: 1rem;
     }
@@ -1300,11 +1038,9 @@ div.sign-up-popup {
       background-position: center;
       width: 30rem;
       height: 20.9rem;
-      // margin-left: 50%;
-      // margin-right: 25%;
+
       display: flex;
-      // flex-direction: column;
-      // justify-content: flex-end;
+
       align-items: center;
       margin-bottom: 1rem;
     }
@@ -1317,11 +1053,9 @@ div.sign-up-popup {
       background-position: center;
       width: 30rem;
       height: 20.9rem;
-      // margin-left: 27%;
-      // margin-right: 25%;
+
       display: flex;
-      // flex-direction: column;
-      // // justify-content: flex-end;
+
       align-items: center;
       margin-bottom: 1rem;
     }
@@ -1329,7 +1063,7 @@ div.sign-up-popup {
 
   // Form Card
   .form-field-card {
-    margin-top: 5rem;
+    margin-top: 3rem;
     border-radius: 4.3rem;
     padding: 3.3rem 2rem 1rem 2rem;
 
@@ -1429,6 +1163,90 @@ div.sign-up-popup {
       font-weight: 600;
       line-height: 2.4rem;
       cursor: pointer;
+    }
+  }
+  // Reduce Section
+  .reduce-title {
+    margin-top: 4rem;
+    font-size: 2.8rem;
+  }
+  .reduce-text {
+    margin-top: 80px;
+    font-size: 1.8rem;
+    margin-top: 1.5%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .button-accordion-joinus {
+    font-size: 2rem;
+    width: 80%;
+    height: 6rem;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+  }
+  // POP-UP-TO-COPY
+  div.sign-up-popup {
+    width: 80%;
+    height: 70%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 1rem;
+    i.bi-plus-circle {
+      top: 1rem;
+      right: 1rem;
+    }
+    .sign-up-card-header {
+      font-size: 2.8rem;
+    }
+    #checkmark {
+      margin-top: 1rem;
+      width: 6rem;
+      height: 6rem;
+    }
+    .sign-up-card-h2 {
+      margin-top: 1rem;
+      font-size: 2rem;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+    .sign-up-card-h3 {
+      margin-left: 5%;
+      margin-right: 5%;
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: center;
+    }
+    .sign-up-card-h3-raleway {
+      font-size: 1.6rem;
+      font-style: normal;
+      line-height: 32px;
+      margin-bottom: 1rem;
+    }
+    .sign-up-card-p {
+      margin-left: 5%;
+      margin-right: 5%;
+      font-size: 1.4rem;
+      line-height: 24px;
+      letter-spacing: 0em;
+    }
+    .social-icons-pop-up {
+      align-content: center;
+      padding-bottom: 1rem;
+      margin-bottom: 1rem;
+      .instagram-pop-up {
+        font-size: 3rem;
+        margin-right: 1rem;
+      }
+      .facebook-pop-up {
+        display: inline;
+        font-size: 3rem;
+        margin-left: 1rem;
+      }
     }
   }
 }
