--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1061,7 +1061,6 @@ a {
 
 .infographic {
   min-height: 40vh;
-  margin-bottom: 10%;
 }
 
 .infographic div {
@@ -1205,7 +1204,7 @@ a {
     margin: 29rem 0rem;
   }
   .card-itself-two h5 {
-    font-size: 3rem;
+    font-size: 3rem !important;
     margin-top: -18rem;
   }
   .card-itself-two h6 {
