--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -223,6 +223,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-top: 2%;
     h3 {
       font-size: 4.5rem;
       font-weight: bold;
@@ -242,21 +243,17 @@
 
 .infographic {
   min-height: 40vh;
-  div {
-    border-radius: 10rem;
-    background: url("../imgs/infographic.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 95%;
-    margin: auto;
-    height: 100rem;
-  }
+  width: 95%;
+  margin-bottom: 2%;
+  padding-left: 15%;
+  padding-right: 10%;
 }
 
 /* mobile responsive */
 
-@media screen and (max-width: 1091px) {
+// @media screen and (max-width: 1091px) {
+
+@media (min-width: 1025px) and (max-width: 1400px) {
   .title-why {
     font-size: 5.5rem !important;
   }
@@ -305,11 +302,14 @@
   .carousel-title-why {
     h3 {
       font-size: 4rem !important;
+      margin-top: -20rem !important;
     }
   }
 }
 
-@media screen and (max-width: 768px) {
+// @media screen and (max-width: 768px) {
+//ipad
+@media (min-width: 541px) and (max-width: 1024px) {
   .compare {
     p .sub-title-why {
       font-size: 3.5rem !important;
@@ -323,19 +323,61 @@
   .explanation-content {
     h2 {
       font-size: 3rem !important;
+      margin-left: 10%;
+      margin-right: 10%;
     }
     h4 {
-      font-size: 1.5rem !important;
+      font-size: 1.9rem !important;
       line-height: 2.5rem;
+      margin-left: 10%;
+      margin-right: 10%;
     }
   }
 
+  .carousel-title-why {
+    h3 {
+      font-size: 4rem !important;
+      margin-top: 3% !important;
+      margin-bottom: 2% !important;
+    }
+  }
+
+  .card-itself {
+    width: 75% !important;
+
+    h5 {
+      font-size: 3rem;
+    }
+
+    h6 {
+      font-size: 2rem;
+      margin-bottom: 3rem;
+      margin-left: 3%;
+      margin-right: 3%;
+    }
+  }
   .card-itself-two {
+    width: 75% !important;
+
+    .card-itself-two-content {
+      margin: 29rem 0rem;
+    }
+
+    h5 {
+      font-size: 3rem !important;
+      margin-top: -18rem;
+    }
+
+    h6 {
+      font-size: 2rem;
+      margin-left: 3%;
+      margin-right: 3%;
+    }
   }
 }
 
 //iphone
-@media screen and (max-width: 375px) {
+@media (min-width: 280px) and (max-width: 539px) {
   .title-why {
     font-size: 4rem !important;
     font-weight: 700;
@@ -481,18 +523,11 @@
 
 
   .infographic {
-    min-height: 40vh;
-  
-    div {
-      border-radius: 10rem;
-      background: url("../imgs/infographic.png");
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-      width: 75% !important;
-      margin: auto;
-      height: 100rem;
-    }
+      min-height: 40vh;
+      width: 100%;
+      margin-bottom: -7rem;
+      padding-left: 10%;
+      padding-right: 10%;
   }
 
   .why-carousel {
@@ -515,6 +550,17 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
+    }
+  }
+
+  .carousel-title-why {
+    h3 {
+      font-size: 3rem !important;
+      font-weight: 700;
+      margin-top: 3% !important;
+      margin-bottom: 2% !important;
+      margin-left: 6%;
+      margin-right: 6%;
     }
   }
 
