--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1072,7 +1072,6 @@ a {
   padding-right: 10%;
 }
 
-/* mobile responsive */
 @media (min-width: 1025px) and (max-width: 1400px) {
   .title-why {
     font-size: 5.5rem !important;
@@ -1112,27 +1111,41 @@ a {
   }
 }
 
-@media (min-width: 541px) and (max-width: 1024px) {
-  .compare p .sub-title-why {
+@media (min-width: 540px) and (max-width: 1022px) {
+  .compare .sub-title-why {
     font-size: 3.5rem !important;
   }
   .compare .sub-desc-why {
     font-size: 1.5rem !important;
   }
-  .explanation-content h2 {
+  .indust .sub-title-why {
     font-size: 3rem !important;
+    font-weight: 700;
+    margin-top: 2%;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+  }
+  .indust .sub-desc-why {
+    font-size: 2rem !important;
+    font-weight: 300;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .explanation-content h2 {
+    font-size: 3.5rem !important;
     margin-left: 10%;
     margin-right: 10%;
   }
   .explanation-content h4 {
-    font-size: 1.9rem !important;
+    font-size: 2rem !important;
     line-height: 2.5rem;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 1% !important;
   }
   .carousel-title-why h3 {
     font-size: 4rem !important;
-    margin-top: 3% !important;
+    margin-top: -5% !important;
     margin-bottom: 2% !important;
   }
   .card-itself {
@@ -1187,16 +1200,6 @@ a {
     font-weight: 300;
     margin-left: 10%;
     margin-right: 10%;
-  }
-  .further-explanation .explanation-content h2 {
-    font-size: 3rem !important;
-    font-weight: 700;
-    color: #024a63;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-  .explanation-content h2 {
-    font-size: 1.5rem !important;
   }
   .card-itself {
     border: solid;
@@ -1307,42 +1310,28 @@ a {
   .infographic {
     min-height: 40vh;
     width: 100%;
-    margin-bottom: -7rem;
+    margin-bottom: 5%;
     padding-left: 10%;
     padding-right: 10%;
-  }
-  .why-carousel {
-    min-height: 50vh;
-  }
-  .why-carousel .carousel-title-why {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .why-carousel .carousel-title-why h3 {
-    font-size: 4.5rem;
-    font-weight: bold;
-    color: #024a63;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin-bottom: 0rem;
-  }
-  .why-carousel .slide-why {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
   }
   .carousel-title-why h3 {
     font-size: 3rem !important;
     font-weight: 700;
-    margin-top: 3% !important;
+    margin-top: 2% !important;
     margin-bottom: 2% !important;
     margin-left: 6%;
     margin-right: 6%;
+  }
+  .explanation-content h2 {
+    font-size: 2.8rem !important;
+    margin-left: 5.7%;
+    margin-right: 5.7%;
+  }
+  .explanation-content h4 {
+    font-size: 1.8rem !important;
+    line-height: 2.5rem;
+    margin-left: 8%;
+    margin-right: 8%;
   }
 }
 
