--- a/src/styles/_aboutUs.scss
+++ b/src/styles/_aboutUs.scss
@@ -229,7 +229,9 @@ p.header-text-about {
   padding-top: 0.8rem;
   font-size: 2.5rem;
 }
-
+.ul{
+  margin-top: -2rem !important;
+}
 .il {
   font-size: 1.75rem;
   line-height: 1.6rem;
@@ -324,6 +326,8 @@ p.header-text-about {
     font-weight: 600;
     margin-top: -3rem !important;
     margin-bottom: 3rem;
+    margin-right: 8.5% !important;
+    margin-left: 8.5% !important;
   }
   .repeating-h3-iggy {
     color: #024a63;
@@ -367,8 +371,8 @@ p.header-text-about {
     padding-left: 1rem;
   }
   .button-accordion-about {
-    font-size: 0.75rem !important;
-    padding: 1rem 1rem 1rem 1rem !important;
+    font-size: 0.7rem !important;
+    padding: 0.75rem 0.75rem 0.25rem 0.75rem !important;
     width: 5rem !important;
     height: 2.2rem !important;
     outline: none !important;
@@ -398,7 +402,7 @@ p.header-text-about {
     border-radius: 58px;
   }
   .col-sm {
-    width: 100px !important;
+    width: 75px !important;
   }
   .col-md {
     width: 100px !important;
@@ -515,6 +519,8 @@ p.header-text-about {
     font-weight: 600;
     margin-top: -3rem !important;
     margin-bottom: 3rem;
+    margin-left: 8.5% !important;
+    margin-right: 8.5% !important;
   }
   .repeating-h3-iggy {
     color: #024a63;
@@ -642,7 +648,7 @@ p.header-text-about {
   }
 }
 //Large Screens: Ipad Pro and Desktop
-@media all and (min-width: 769px) and (max-width: 1300px) {
+@media screen and (min-width: 769px) and (max-width: 1300px) {
   section.header-image-about {
     min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
@@ -738,6 +744,9 @@ p.header-text-about {
     margin-left: 2rem;
     padding-top: 0.8rem;
     font-size: 2.5rem;
+  }
+  .ul{
+    margin-top: -2rem !important;
   }
   .il {
     font-size: 1.3rem !important;
