--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3200,6 +3200,10 @@ p.header-text-about {
   font-size: 2.5rem;
 }
 
+.ul {
+  margin-top: -2rem !important;
+}
+
 .il {
   font-size: 1.75rem;
   line-height: 1.6rem;
@@ -3296,6 +3300,8 @@ p.header-text-about {
     font-weight: 600;
     margin-top: -3rem !important;
     margin-bottom: 3rem;
+    margin-right: 8.5% !important;
+    margin-left: 8.5% !important;
   }
   .repeating-h3-iggy {
     color: #024a63;
@@ -3339,8 +3345,8 @@ p.header-text-about {
     padding-left: 1rem;
   }
   .button-accordion-about {
-    font-size: 0.75rem !important;
-    padding: 1rem 1rem 1rem 1rem !important;
+    font-size: 0.7rem !important;
+    padding: 0.75rem 0.75rem 0.25rem 0.75rem !important;
     width: 5rem !important;
     height: 2.2rem !important;
     outline: none !important;
@@ -3370,7 +3376,7 @@ p.header-text-about {
     border-radius: 58px;
   }
   .col-sm {
-    width: 100px !important;
+    width: 75px !important;
   }
   .col-md {
     width: 100px !important;
@@ -3487,6 +3493,8 @@ p.header-text-about {
     font-weight: 600;
     margin-top: -3rem !important;
     margin-bottom: 3rem;
+    margin-left: 8.5% !important;
+    margin-right: 8.5% !important;
   }
   .repeating-h3-iggy {
     color: #024a63;
@@ -3614,7 +3622,7 @@ p.header-text-about {
   }
 }
 
-@media all and (min-width: 769px) and (max-width: 1300px) {
+@media screen and (min-width: 769px) and (max-width: 1300px) {
   section.header-image-about {
     min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
@@ -3707,6 +3715,9 @@ p.header-text-about {
     margin-left: 2rem;
     padding-top: 0.8rem;
     font-size: 2.5rem;
+  }
+  .ul {
+    margin-top: -2rem !important;
   }
   .il {
     font-size: 1.3rem !important;
