--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5212,4 +5212,124 @@ div.sign-up-popup .social-icons-pop-up .facebook-pop-up {
   font-size: 1.5rem !important;
   margin-right: 3rem;
 }
+
+.header-image-mem {
+  min-height: 60vh;
+  background: url("../imgs/Partners/partnerheader.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.header {
+  font-family: "Cabin", sans-serif;
+  font-size: 6.5rem;
+  font-weight: 700;
+  margin-top: 9.2rem;
+}
+
+.header-text {
+  font-family: "Cabin", sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+  margin: 1rem 9.5rem 11.3rem 9.5rem;
+}
+
+h5.membership-card-title {
+  font-family: "Cabin", sans-serif;
+  font-size: 3.5rem;
+  font-weight: 600;
+  line-height: 4rem;
+  margin-bottom: 1rem;
+  margin-left: 2.4rem;
+  margin-right: 2.4rem;
+}
+
+.membership-card-text {
+  display: contents;
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+@media (min-width: 1280px) {
+  h5.membership-card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 3.5rem;
+    font-weight: 600;
+    line-height: 4rem;
+    margin-bottom: 1rem;
+    margin-left: 2.4rem;
+    margin-right: 2.4rem;
+  }
+  .membership-card-text {
+    display: contents;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  h5.membership-card-title {
+    font-size: 3.5rem;
+    line-height: 4.2rem;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  p.membership-card-text {
+    display: contents;
+    font-family: "Raleway", sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    padding-bottom: 1rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  h5.membership-card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.membership-card-text {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 500px) and (max-width: 767px) {
+  h5.membership-card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.membership-card-text {
+    font-family: "Raleway", sans-serif;
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 499px) {
+  h5.partner-card-title {
+    font-family: "Cabin", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 2.4rem;
+    margin-left: 0.15rem;
+    margin-right: 0.15rem;
+  }
+  p.partner-card-text {
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+    padding-bottom: 0rem;
+  }
+}
 /*# sourceMappingURL=home.css.map */
