newsletter fixed needs firebase

--- a/src/styles/_joinUs.scss
+++ b/src/styles/_joinUs.scss
@@ -67,6 +67,9 @@
     color: #024a63;
     margin-bottom: 2.4rem;
   }
+  p.required-orange {
+    color: #ff7c5c;
+  }
 
   .join-us-form-labels {
     font-family: "Cabin", sans-serif;
