--- a/src/styles/_newsletter.scss
+++ b/src/styles/_newsletter.scss
@@ -3,6 +3,7 @@
   color: #024a63;
   border: 1px solid #024a63;
   padding-top: 2.4rem;
+  margin-top: 6rem;
   .newsLetter-container {
     width: 100%;
     display: flex;
@@ -25,6 +26,7 @@
       font-weight: 400;
     }
   }
+
   .inputs-container {
     margin-right: 6rem;
     font-family: Cabin, sans-serif;
@@ -77,25 +79,211 @@
   }
 }
 
-@media screen and (max-width: 730px) {
+@media (min-width: 540px) and (max-width: 730px) {
   .desc-container {
     text-align: center;
+    margin-left: 1rem;
+    margin-right: 4rem;
   }
 
   .inputs-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    margin-left: 11%;
   }
 }
+@media (min-width: 500px) and (max-width: 539px) {
+  .newsLetter {
+    min-height: 5vh;
+    color: #024a63;
+    border: 1px solid #024a63;
+    padding-top: 2.4rem;
+    margin-top: 6rem;
+    overflow-x: hidden;
 
+    .desc-container {
+      text-align: center;
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+
+    .inputs-container {
+      margin-left: 17%;
+
+      label {
+        color: #024a63;
+        font-size: 1.5rem;
+        margin-left: 3%;
+      }
+
+      input {
+        background-color: #e2f0ef;
+        width: 15rem;
+        border-radius: 2rem;
+      }
+      .lastname {
+        margin-left: 3%;
+      }
+      .email {
+        justify-content: center;
+        #email {
+          width: 33rem;
+          margin-bottom: 1.5rem;
+        }
+      }
+    }
+  }
+}
+@media (min-width: 375px) and (max-width: 499px) {
+  .newsLetter {
+    min-height: 5vh;
+    color: #024a63;
+    border: 1px solid #024a63;
+    padding-top: 2.4rem;
+    margin-top: 6rem;
+    overflow-x: hidden;
+
+    .desc-container {
+      text-align: center;
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+
+    .inputs-container {
+      margin-left: 10%;
+
+      label {
+        color: #024a63;
+        font-size: 1.5rem;
+        margin-left: 3%;
+      }
+
+      input {
+        background-color: #e2f0ef;
+        width: 15rem;
+        border-radius: 2rem;
+      }
+      .lastname {
+        margin-left: 3%;
+      }
+      .email {
+        justify-content: center;
+        #email {
+          width: 33rem;
+          margin-bottom: 1.5rem;
+        }
+      }
+    }
+  }
+}
+@media (min-width: 375px) and (max-width: 413px) {
+  .newsLetter {
+    min-height: 5vh;
+    color: #024a63;
+    border: 1px solid #024a63;
+    padding-top: 2.4rem;
+    margin-top: 6rem;
+    overflow-x: hidden;
+
+    .desc-container {
+      text-align: center;
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+
+    .inputs-container {
+      margin-left: 5%;
+
+      label {
+        color: #024a63;
+        font-size: 1.5rem;
+        margin-left: 3%;
+      }
+
+      input {
+        background-color: #e2f0ef;
+        width: 15rem;
+        border-radius: 2rem;
+      }
+      .lastname {
+        margin-left: 3%;
+      }
+      .email {
+        justify-content: center;
+        #email {
+          width: 33rem;
+          margin-bottom: 1.5rem;
+        }
+      }
+    }
+  }
+}
 // iphone X
-@media (min-width: 280px) and (max-width: 539px) {
-  .inputs-container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+@media (min-width: 280px) and (max-width: 374px) {
+  .newsLetter {
+    min-height: 5vh;
+    color: #024a63;
+    border: 1px solid #024a63;
+    padding-top: 2.4rem;
+    margin-top: 6rem;
+    overflow-x: hidden;
+    .newsLetter-container {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    .desc-container {
+      text-align: center;
+      margin-left: 0;
+    }
+
+    .inputs-container {
+      margin-right: 6rem;
+      font-family: Cabin, sans-serif;
+      display: flex;
+      flex-direction: column;
+      margin-left: 5%;
+
+      label {
+        color: #024a63;
+        font-size: 1.5rem;
+        margin-left: 5%;
+      }
+
+      input {
+        background-color: #e2f0ef;
+        width: 10rem;
+        border-radius: 2rem;
+      }
+      .lastname {
+        margin-left: 20%;
+      }
+      .email {
+        justify-content: center;
+        #email {
+          width: 28rem;
+          margin-bottom: 1.5rem;
+        }
+      }
+
+      button {
+        background: #ff7c5c;
+        border: 0rem solid white;
+        color: white;
+        font-size: 1.4rem;
+        border-radius: 2.4rem;
+        padding: 0.5rem 2rem;
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .input-names {
+        display: flex;
+      }
+    }
   }
 }
