--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -710,7 +710,7 @@ a {
 .learn-how-events {
   padding: 0.5rem 3.5rem;
   margin-top: -2rem;
-  margin-bottom: 20rem;
+  margin-bottom: 0rem;
   background: #ff7c5c;
   border: 0rem solid white;
   color: white;
@@ -3622,7 +3622,7 @@ p.header-text-about {
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1300px) {
+@media screen and (min-width: 769px) and (max-width: 1600px) {
   section.header-image-about {
     min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
@@ -3679,10 +3679,10 @@ p.header-text-about {
     margin: auto !important;
     background: #bededf;
     border-radius: 7rem;
-    width: 68rem !important;
+    width: 69rem !important;
   }
   .container-2 {
-    width: 68rem !important;
+    width: 69rem !important;
     height: 43rem !important;
     margin: auto !important;
   }
@@ -3727,7 +3727,7 @@ p.header-text-about {
   }
 }
 
-@media all and (min-width: 1000px) and (max-width: 1300) {
+@media all and (min-width: 1000px) and (max-width: 1600) {
   section.header-image-about {
     min-height: 50vh !important;
     background: url("../imgs/aboutus/header1.png");
@@ -5245,6 +5245,12 @@ div.sign-up-popup .social-icons-pop-up .facebook-pop-up {
 .btn-primary {
   font-family: "Cabin", sans-serif;
   font-size: 1.5rem !important;
+  margin-right: 3rem;
+}
+
+.mt-4 {
+  font-size: 1.5rem;
+  margin-left: 3rem;
   margin-right: 3rem;
 }
 /*# sourceMappingURL=home.css.map */
