Collections fix, Navbar fix

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -220,6 +220,11 @@
   border-radius: 4.3rem;
   font-family: "Cabin", sans-serif;
 }
+
+.videoStyle{
+  text-align: -webkit-center;
+  margin-bottom: 40px;
+}
 //extra screen sizes 
 @media (min-width: 1025px) and (max-width: 1400px) {
   .homepage-color {
