--- a/src/styles/_why.scss
+++ b/src/styles/_why.scss
@@ -383,7 +383,7 @@
   }
 
   .desc-why {
-    font-size: 2rem;
+    font-size: 2rem !important;
     font-weight: 400;
     margin-bottom: 20%;
     margin-left: 4%;
