--- a/src/styles/_partners.scss
+++ b/src/styles/_partners.scss
@@ -808,7 +808,7 @@ div.rounded-circle {
     p.header {
       font-size: 4rem;
       font-weight: 700;
-      margin-top: 1rem;
+      margin-top: 35%;
       margin-bottom: 0.5rem;
       line-height: 4.5rem;
     }
