last mobile change to membership page

--- a/src/styles/_membership.scss
+++ b/src/styles/_membership.scss
@@ -148,4 +148,15 @@ h5.membership-card-title {
     line-height: 1.6rem;
     padding-bottom: 0rem;
   }
+  .discount-info {
+    margin-bottom: 30%;
+    p {
+      font-family: "Raleway", sans-serif;
+      font-size: 2rem;
+    }
+    .discount-code {
+      color: #ff7c5c;
+      font-size: 1.7rem;
+    }
+  }
 }
